--- a/admin/templates/roles.html
+++ b/admin/templates/roles.html
@@ -1,9 +1,10 @@
 <h2 class="text-2xl font-bold">Roles</h2>
+{{ block "roles" . }}
 <section class="grid grid-cols-3 gap-2 items-center m-4">
     <p class="font-bold">Name</p>
     <p class="font-bold">Members</p>
     <p class="font-bold">Description</p>
-    {{ range .Roles }}
+    {{ range . }}
         <hr class="col-span-3">
         <a href="/role/{{ .ID }}">{{ .DisplayName }}</a>
         <span>
@@ -17,3 +18,4 @@
         <span>{{ .Description }}</span>
     {{ end }}
 </section>
+{{ end }}
