Improve error handling

--- a/admin/templates/layout.html
+++ b/admin/templates/layout.html
@@ -26,7 +26,7 @@
 </head>
 <body>
     <div class="h-[50px]" id="methone-container-replace"></div>
-    <main class="p-4" hx-boost="true" hx-target="this">
+    <main class="p-4 max-w-screen-lg mx-auto md:mt-24" hx-boost="true" hx-target="this">
         {{ .Contents }}
     </main>
 </body>
