--- a/admin/templates/role.html
+++ b/admin/templates/role.html
@@ -1,4 +1,23 @@
-<h1 class="text-3xl font-bold">{{ .DisplayName }}</h1>
+{{ block "role-name" . }}
+<h1
+    class="text-3xl font-bold"
+    hx-get="/role/name/{{ .ID }}"
+    hx-swap="outerHTML"
+    hx-target="this"
+>{{ .DisplayName }}</h1>
+{{ end }}
+{{ define "role-edit-name" }}
+<form
+    class="text-3xl"
+    hx-post="/role/name/{{ .ID }}"
+    hx-target="this"
+>
+    <input name="display-name" type="text" value="{{ .DisplayName }}" />
+    <input type="submit" value="Save" />
+</form>
+{{ end }}
+
+<p>{{ .Description }}</p>
 
 <h2 class="text-xl">Sub-roles</h2>
 {{ template "roles" .Subroles }}
