--- a/admin/templates/layout.html
+++ b/admin/templates/layout.html
@@ -23,6 +23,13 @@
     <script defer src="https://methone.datasektionen.se/bar.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://unpkg.com/htmx.org@1.9.5"></script>
+    <style>
+@import url(https://fonts.googleapis.com/css?family=Lato:400,300,700,400italic,700italic,900);
+@import url(https://use.fontawesome.com/releases/v6.4.2/css/all.css);
+body {
+    font-family: Lato;
+}
+    </style>
 </head>
 <body>
     <div class="h-[50px]" id="methone-container-replace"></div>
