--- a/admin/templates/role.html
+++ b/admin/templates/role.html
@@ -28,10 +28,10 @@
 <p>{{ .Description }}</p>
 
 <h2 class="text-xl">Sub-roles</h2>
-{{ template "roles" .Subroles }}
+{{ template "subroles.html" . }}
 
 <h2 class="text-xl">Members</h2>
-<section class="grid grid-cols-3 gap-2 items-center m-3">
+<section class="grid grid-cols-3 gap-2 items-center p-3">
     <p class="font-bold">Name</p>
     <p class="font-bold">Date range</p>
     <p class="font-bold">Comment</p>
