--- a/admin/templates/roles.html
+++ b/admin/templates/roles.html
@@ -1,6 +1,6 @@
 <h2 class="text-2xl font-bold">Roles</h2>
 {{ block "roles" . }}
-<section class="grid grid-cols-3 gap-2 items-center m-4">
+<section class="grid grid-cols-3 gap-2 items-center p-4">
     <p class="font-bold">Name</p>
     <p class="font-bold">Members</p>
     <p class="font-bold">Description</p>
