--- a/admin/templates/role.html
+++ b/admin/templates/role.html
@@ -56,3 +56,6 @@
 
 <h2 class="text-xl">Members</h2>
 {{ template "members.html" . }}
+
+<h2 class="text-xl">Permissions</h2>
+{{ template "permissions.html" . }}
