--- a/admin/templates/roles.templ
+++ b/admin/templates/roles.templ
@@ -13,9 +13,17 @@ func plural(count int) string {
 	return "s"
 }
 
+func tenary[T any](condition bool, then T, elze T) T {
+	if condition {
+		return then
+	} else {
+		return elze
+	}
+}
+
 templ Roles(roles []models.Role, mayCreate, mayDelete bool) {
 	<h2 class="text-2xl font-bold">Roles</h2>
-	<section class="grid grid-cols-{{ if .MayDelete }}4{{ else }}3{{ end }} gap-2 items-center p-4">
+	<section class={ "grid grid-cols-" + tenary(mayDelete, "4", "3") + " gap-2 items-center p-4" }>
 		<p class="font-bold">Name</p>
 		<p class="font-bold">Members</p>
 		<p class="font-bold">Description</p>
@@ -24,7 +32,7 @@ templ Roles(roles []models.Role, mayCreate, mayDelete bool) {
 		}
 		for _, role := range roles {
 			<hr class="col-span-full"/>
-			<a href="/role/{{ .ID }}">{ role.DisplayName }</a>
+			<a href={ templ.URL("/role/" + role.ID) }>{ role.DisplayName }</a>
 			<span>
 				if role.SubroleCount > 0 {
 					<p>{ strconv.Itoa(role.SubroleCount) } sub-role{ plural(role.SubroleCount) }</p>
@@ -36,14 +44,14 @@ templ Roles(roles []models.Role, mayCreate, mayDelete bool) {
 			<span>{ role.Description }</span>
 			if mayDelete {
 				<form
- 					class="text-red-800"
- 					hx-post="/roles"
- 					hx-target="main"
- 					hx-swap="innerHTML"
- 					hx-confirm="Are you sure?"
+					class="text-red-800"
+					hx-post="/roles"
+					hx-target="main"
+					hx-swap="innerHTML"
+					hx-confirm="Are you sure?"
 				>
 					<input type="submit" name="action" value="Delete" class="cursor-pointer"/>
-					<input type="hidden" name="id" value="{{ .ID }}"/>
+					<input type="hidden" name="id" value={ role.ID }/>
 				</form>
 			}
 		}
