--- a/admin/templates/roles.templ
+++ b/admin/templates/roles.templ
@@ -63,7 +63,7 @@ templ Roles(roles []models.Role, mayCreate, mayDelete bool) {
 	}
 }
 
-templ CreateRole() {
+templ CreateRoleForm() {
 	<form hx-post="/roles" class="flex gap-2 flex-justify p-4 pt-0" hx-target="main" hx-swap="innerHTML">
 		<label for="id">ID:</label>
 		<input class="border-b border-black" type="text" id="id" name="id"/>
