--- a/admin/templates/error.templ
+++ b/admin/templates/error.templ
@@ -2,10 +2,11 @@ package templates
 
 import (
 	"strconv"
+	"net/http"
 )
 
-templ Error(statusCode int, statusText string, messages []string) {
-	<h1 class="text-2xl font-bold text-center">{ strconv.Itoa(statusCode) } - { statusText }</h1>
+templ errorComponent(statusCode int, messages ...string) {
+	<h1 class="text-2xl font-bold text-center">{ strconv.Itoa(statusCode) } - { http.StatusText(statusCode) }</h1>
 	for _, message := range messages {
 		<p class="text-red">{ message }</p>
 	}
