--- a/admin/templates/role.templ
+++ b/admin/templates/role.templ
@@ -66,5 +66,5 @@ templ Role(role models.Role, subroles []models.Role, members []models.Member, pe
 	<h2 class="text-xl">Members</h2>
 	@Members(role.ID, members, mayUpdate, uuid.Nil, false)
 	<h2 class="text-xl">Permissions</h2>
-	@Permissions(permissions)
+	@Permissions(role.ID, permissions)
 }
