--- a/admin/templates/roles.templ
+++ b/admin/templates/roles.templ
@@ -30,26 +30,25 @@ templ Roles(roles []models.Role, mayCreate, mayDelete bool) {
 			if mayDelete {
 				<form
 					class="text-red-800"
-					hx-post="/roles"
+					hx-delete={"/role/" + role.ID}
 					hx-swap="innerHTML"
 					hx-confirm="Are you sure?"
 					hx-target="main"
 				>
-					<input type="submit" name="action" value="Delete" class="cursor-pointer"/>
-					<input type="hidden" name="id" value={ role.ID }/>
+					<button>Delete</button>
 				</form>
 			}
 		}
 	</section>
 	if mayCreate {
 		<section class="p-4 pt-0" hx-swap="outerHTML">
-			<button class="bg-slate-300 w-8 h-8" hx-get="/roles">+</button>
+			<button class="bg-slate-300 w-8 h-8" hx-get="/role">+</button>
 		</section>
 	}
 }
 
 templ CreateRoleForm(roles []models.Role) {
-	<form hx-post="/roles" class="flex gap-2 flex-col p-4 pt-0 flex-wrap" hx-target="main" hx-swap="innerHTML">
+	<form hx-post="/role" class="flex gap-2 flex-col p-4 pt-0 flex-wrap" hx-target="main" hx-swap="innerHTML">
 		<h3 class="text-xl font-bold">Create role</h3>
 		<div>
 			<label for="id">ID:</label>
@@ -73,7 +72,7 @@ templ CreateRoleForm(roles []models.Role) {
 			<p class="text-gray-600">This role will get permission to manage the created role</p>
 		</div>
 		<div class="flex justify-center">
-			<input type="submit" name="action" value="Create" class="bg-blue-300 px-4 p-2 rounded-md"/>
+			<button class="bg-blue-300 px-4 p-2 rounded-md">Create</button>
 		</div>
 	</form>
 }
